samples/_failures_safe/1761496912_123d01_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8e77a651.c: In function ‘main’:
./samples/SAFE/__tmp_8e77a651.c:156:5: error: expected expression at end of input
  156 |     if (scanf("%d %d", &start, &end) !=
      |     ^~
./samples/SAFE/__tmp_8e77a651.c:156:5: error: expected declaration or statement at end of input
